Refactoring + notebook cleanup

--- a/abt_buy_entity_matching.ipynb
+++ b/abt_buy_entity_matching.ipynb
@@ -20,13 +20,37 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fyjN7a6iTGSX",
+        "outputId": "74bec666-240d-4eac-8b37-956793904aaf"
+      },
       "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "r-P2HuDhPWJO",
-        "outputId": "5e5d424c-6064-4b4f-b0ba-5fe3f85aea9c"
+        "outputId": "e18cd682-f64a-468f-9b0b-1d1471b7dbbb"
       },
       "outputs": [
         {
@@ -37,7 +61,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ],
       "source": [
@@ -68,30 +92,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fyjN7a6iTGSX",
-        "outputId": "6727ba05-94cd-4968-c499-40603309eccb"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "abt_buy_train_df.head()"
       ],
       "metadata": {
@@ -102,7 +102,7 @@
         "id": "xDIyoSadAxzU",
         "outputId": "01d06d55-69be-4b9c-fccc-539d19e55b62"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -335,7 +335,7 @@
         "id": "ZkldyishAx8a",
         "outputId": "e03ded0a-292d-406b-a26b-48b8c0a69ccf"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,31 +777,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "train_pos = (abt_buy_train_df['matching'] == True).sum()\n",
+        "val_pos = (abt_buy_val_df['matching'] == True).sum()\n",
+        "test_pos = (abt_buy_test_df['matching'] == True).sum()\n",
+        "train_pos, train_pos/len(abt_buy_train_recs), val_pos, val_pos/len(abt_buy_val_recs), test_pos, test_pos/len(abt_buy_test_recs)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "25z3JceoNRbl",
-        "outputId": "05be7365-a3d0-4f04-e443-2813d4c0f353"
+        "id": "KX8n9baPRR-D",
+        "outputId": "ddcac683-2c78-4b37-c6be-4d206da8e005"
       },
+      "execution_count": 4,
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(764, 0.15249500998003993, 220, 0.15288394718554552, 109, 0.15352112676056337)"
             ]
           },
-          "execution_count": 2,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 4
         }
-      ],
-      "source": [
-        "train_pos = len([a for a in abt_buy_train_recs if a['matching']])\n",
-        "val_pos = len([a for a in abt_buy_val_recs if a['matching']])\n",
-        "test_pos = len([a for a in abt_buy_test_recs if a['matching']])\n",
-        "train_pos, train_pos/len(abt_buy_train_recs), val_pos, val_pos/len(abt_buy_val_recs), test_pos, test_pos/len(abt_buy_test_recs)"
       ]
     },
     {
@@ -816,16 +816,16 @@
     {
       "cell_type": "code",
       "source": [
-        "len(abt_df[abt_df['name'].isnull()]) / len(abt_df), len(buy_df[buy_df['name'].isnull()]) / len(buy_df)"
+        "(abt_df['name'].isnull()).sum() / len(abt_df), (buy_df['name'].isnull()).sum() / len(buy_df)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RGYnI4NJUKcV",
-        "outputId": "504e532f-97d1-4cb0-c30f-7ba0f38741ac"
+        "outputId": "eb1b1bfb-53d0-47cc-87a5-5caf91fd551d"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -835,7 +835,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 6
         }
       ]
     },
@@ -850,13 +850,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UVxEoA5c39ks",
-        "outputId": "5132eb31-0f73-4efa-e87d-e0b3b72f82f7"
+        "outputId": "78330506-efa7-4962-9055-6e017415b725"
       },
       "outputs": [
         {
@@ -867,11 +867,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 7
         }
       ],
       "source": [
-        "len(abt_df[abt_df['price'].isnull()]) / len(abt_df), len(buy_df[buy_df['price'].isnull()]) / len(buy_df)"
+        "(abt_df['price'].isnull()).sum() / len(abt_df), (buy_df['price'].isnull()).sum() / len(buy_df)"
       ]
     },
     {
@@ -886,14 +886,14 @@
     {
       "cell_type": "code",
       "source": [
-        "len(abt_df[abt_df['description'].isnull()]) / len(abt_df), len(buy_df[buy_df['description'].isnull()]) / len(buy_df)"
+        "(abt_df['description'].isnull()).sum() / len(abt_df), (buy_df['description'].isnull()).sum() / len(buy_df)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QIthjCpcTAHm",
-        "outputId": "ce59d270-0a1a-4785-881f-67dc7f4fdaed"
+        "outputId": "2bf51f70-f185-4f5d-fd2a-c506b82b8864"
       },
       "execution_count": 8,
       "outputs": [
@@ -969,7 +969,7 @@
         "id": "2BAVUrOVVr3B",
         "outputId": "ba663659-9948-4a72-d6ed-60731141f1e0"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1011,7 +1011,7 @@
       "metadata": {
         "id": "nbH3jOkWV-Cn"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1048,7 +1048,7 @@
         },
         "outputId": "ec34d739-6e9d-4f00-a4fe-34e4a5581f11"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1073,7 +1073,7 @@
         },
         "outputId": "39162d4c-2c2c-42f2-d72e-dddd033146e8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1308,7 +1308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1444,7 +1444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "D7l-lbinzGZj"
       },
@@ -1459,7 +1459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1514,7 +1514,7 @@
         },
         "outputId": "5cbb442e-0e43-438a-8a9a-0c40350bee1b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1527,7 +1527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "fV29BVce14Cm",
         "colab": {
@@ -2019,7 +2019,7 @@
         },
         "outputId": "cba21f84-1566-4597-f64f-cbb7e024c5bc"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2106,7 +2106,7 @@
         "id": "c30xvOFMRzf3",
         "outputId": "4be32706-d104-4e56-fb5a-0163d8ed1c3c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2137,7 +2137,7 @@
         "id": "8EwqhQVxBx58",
         "outputId": "e7453a02-e700-4b7b-9aef-48117613471b"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2191,7 +2191,7 @@
         "id": "VBaBXyDDxFQj",
         "outputId": "9b6ff797-b16c-47eb-bcf2-9819f468869c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2303,7 +2303,7 @@
         },
         "outputId": "cd64f4e4-b4ef-4efd-d1c2-717dee64c5a2"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2326,7 +2326,7 @@
         "id": "FTiDQ2KNMwRo",
         "outputId": "539a3ca3-c26d-49db-9a58-572e90dcbaa5"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2412,7 +2412,7 @@
         },
         "outputId": "04af8118-0ebc-4f60-8ca4-6b99603b8eea"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3316,7 +3316,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
       "gpuClass": "premium"
     },
     "kernelspec": {
@@ -3326,7 +3325,6 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
         "1a4c83bf579a47b48f6a2fad8cde740b": {
